--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,15 +14,18 @@
 
 <body>
     <!-- header -->
-    <header id="site-header">
-        <div class="navbar navbar-inverse">
-            <div class="container">
-                <div class="navbar-header">
-                    <a href="/posts" class="navbar-brand">CS372 Posts</a>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="collapse navbar-collapse">
+            <div class="navbar-header">
+                <a href="/" class="navbar-brand">CS372 Posts</a>
             </div>
+
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a class="nav-link" href="/posts">Posts</a></li>
+                <li class="nav-item"><a class="nav-link" href="/posts/create">Create a Post</a></li>
+            </ul>
         </div>
-    </header>
+    </nav>
 
     <!-- main -->
     <main id="site-main">
@@ -36,4 +39,5 @@
         Copyright &copy; CS372 (Fall 2020)
     </footer>
 </body>
+
 </html>
